--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ workflows:
   daily_release:
     triggers:
       - schedule:
-          cron: "*/15 * * * *" # Mon-Thursday at 2pm CT (19 -> 7pm UTC)
+          cron: "30 * * * 1-5" # Mon-Thursday at 2pm CT (19 -> 7pm UTC)
           filters:
             branches:
               only:
